# rc

./: .Xresources  .Xresources.demandred  .aspell.en.pws  .conkerorrc  .dircolors  .emacs  .emacs-clean  .gitconfig  .gitignore  .gitmodules  .gnus.el  .mbsyncrc  .quiltrc  .rtorrent.rc  .sbclrc  .tmux.conf  .vimrc  .xmobarrc  .xsession  .zshrc  agenda-gen.sh  alacritty.yml  bitlbee.conf  bootstrap.sh  broot-conf.toml  conkeror  custom.el  custom.el-old  default.pa  dunstrc  emacs-config-clean.org  emacs-config-clean.org_archive  emacs-config-old-v2.org  emacs-config-old.org  emacs-config.org  emacs-config.org_archive  ghci.conf  gpg-agent.conf  hardlink-dicts.sh  haskell-bootstrap.sh  (+20 more)
.urxvt/ext/: filter_title
.xmonad/: .#xmonad.hs  binarin-xmonad-config.cabal  stack.yaml  xmonad.hs
.xmonad/lib/: Xkb.hs  XmobarToggle.hi  XmobarToggle.hs  lib
.xmonad/lib/XMonad/Hooks/: PerWindowKbdLayout.hsc
nix/: custom-packages.nix  default.nix  my-emacs.nix  vagrant-shell.nix
nix/docker-machine-driver-kvm/: default.nix
nix/erlang/: R18.nix
nix/gp6/: binary.nix  default.nix  libcrypto.so.0.9.8  libssl.so.0.9.8  ssl.0.9.8.nix  userenv.nix
nix/insync/: default.nix
nix/the_platinum_searcher/: default.nix
nix/viber/: default.nix
nix/yandex-disk/: default.nix
puppet/: Puppetfile  apply.sh  hiera.yaml  site.pp
puppet/binarin/: README.md  metadata.json
puppet/binarin/manifests/: init.pp  role.pp
puppet/binarin/manifests/profile/: base.pp  docker.pp  haskell.pp  sbcl.pp  sshmenu.pp  xmonad.pp
puppet/binarin/manifests/role/: demandred.pp
puppet/binarin/spec/classes/: init_spec.rb
puppet/binarin/tests/: init.pp
snippets/cperl-mode/: moose has  perl function with documentation  warn data dumper
snippets/erlang-mode/: erlang-debug-print  macro for erlang debug printing  minimal gen_fsm  minimal gen_server  stderr
snippets/html-mode/: bootstrap button for horizontal form  bs-form-group  form
snippets/php-mode/: phpcs ignore end  phpcs ignore start
snippets/python-mode/: pprint  with transaction cursor
snippets/sql-mode/: BeeTa database fixture  CREATE TABLE with dry-run option  SPG migrations - add column  add sequence migrations  mysql table  postgres migration - create table  postgres-column-migration  postgres-index-migration  spev  spgsf
taffybar/: taffybar.css  taffybar.hs
xmonad-config/: build  gi-gdkx.nix  result  xmonad-config.nix
xmonad-config/src/: Main.hs  package.yaml  xmonad-config.cabal
xmonad-config/src/XMonad/Layout/: Ultrawide.hs
