name:                binarin-xmonad-config
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/binarin-xmonad-config#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     Xkb
  build-depends:       base >= 4.7 && < 5
                     , xmonad
                     , xmonad-contrib >= 0.12
                     , containers
                     , data-default
                     , X11
  default-language:    Haskell2010

executable binarin-xmonad-config-exe
  hs-source-dirs:      .
  main-is:             xmonad.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , binarin-xmonad-config
                     , xmonad
                     , xmonad-contrib >= 0.12
                     , containers
                     , data-default
                     , X11
  default-language:    Haskell2010
